# reverse-dcf-valuation-model

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  sitecustomize.py
app/: streamlit_app.py
data/sample_inputs/: aapl.json  msft.json
notebooks/: 01_basic_dcf.ipynb  02_reverse_dcf_solver.ipynb  03_stock_pitch_case_study.ipynb
reports/: aapl_reverse_dcf_report.md  msft_reverse_dcf_report.md
reversedcf/: __init__.py
scripts/: generate_report.py  run_aapl_case_study.py  run_msft_case_study.py
src/reversedcf/: __init__.py  cli.py  data.py  dcf.py  financials.py  metrics.py  plotting.py  report.py  reverse.py  scenarios.py  sensitivity.py
tests/: test_app_import.py  test_app_report.py  test_data.py  test_dcf.py  test_financials.py  test_reverse_solver.py  test_scenarios.py  test_sensitivity.py
