[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reverse-dcf-valuation-model"
version = "0.1.0"
description = "Educational reverse DCF valuation toolkit for equity research-style analysis."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Mehul Garg" }
]
keywords = ["valuation", "dcf", "finance", "data-science", "equity-research"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial :: Investment",
  "Topic :: Scientific/Engineering :: Information Analysis"
]
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "matplotlib",
  "yfinance",
  "typer",
]

[project.optional-dependencies]
app = ["streamlit"]
dev = ["pytest", "jupyter", "ipykernel"]

[project.urls]
Repository = "https://github.com/mehul532/reverse-dcf-valuation-model"

[project.scripts]
reversedcf = "reversedcf.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
